--- a/themes/next/languages/zh-CN.yml
+++ b/themes/next/languages/zh-CN.yml
@@ -84,8 +84,9 @@ reward:
   wechatpay: 微信
   alipay: 支付宝
   paypal: PayPal
-  bitcoin: 比特币
-  comment: Buy me a coffee
+  okx: 欧易OKC网络多币种兼容（BTC、ETH、USDT、USDC等）
+  xmr: XMR，充币网络XMR-Monero
+  comment: 请我喝冰阔落~
 follow_me:
   welcome: 欢迎关注我的其它发布渠道
 accessibility:
