--- a/source/_posts/成都城投凤起兰庭保租房密码锁操作教程.md
+++ b/source/_posts/成都城投凤起兰庭保租房密码锁操作教程.md
@@ -26,6 +26,8 @@ tags:
 >           2. 如若城投拒绝我们的诉求，则集体向政府有关部门反映、上访！
 >           3. 若此事连政府都不为我们做主，那我们则集体各自更换门锁，并确保一旦有城投因此对任何承租人进行清退等侵犯承租人权益的行为是，集体抵抗！
 
+<!-- more -->
+
 ### 1. 以下是智能门锁操作教程
 
 #### 1.1 第一步：恢复出厂设置
