--- a/source/_posts/成都城投凤起兰庭保租房密码锁操作教程.md
+++ b/source/_posts/成都城投凤起兰庭保租房密码锁操作教程.md
@@ -28,9 +28,9 @@ tags:
 
 <!-- more -->
 
-### 1. 以下是智能门锁操作教程
+### 以下是智能门锁操作教程
 
-#### 1.1 第一步：恢复出厂设置
+#### 第一步：恢复出厂设置
 
 将门锁的后面板向上滑开，找到恢复出厂设置的按钮，如图所示：
 
@@ -40,7 +40,7 @@ tags:
 
 来到前面板，触摸**密码输入区**，激活面板，然后按住**#**，直到出现较长的提示音”滴——！“，然后会听到菜单播报，菜单功能如下：
 
-##### 1.1.1 主菜单
+##### 主菜单
 
 |按键|功能|
 |---|---|
@@ -48,7 +48,7 @@ tags:
 |2|用户设置|
 |其他|略过，用不住，如有需要补充，联系我，后续抽空补全|
 
-##### 1.1.2 子菜单
+##### 子菜单
 
 |主菜单|按键|功能|
 |---|---|---|
@@ -57,13 +57,13 @@ tags:
 |用户设置|1|添加用户|
 ||2|删除用户
 
-#### 1.2 创建管理员
+#### 创建管理员
 
 紧跟上一步操作，在初始化完成并进入菜单后，先按**1**听到播报“1、创建管理员，2、删除管理员”后，无需等待语音播报完成，只要听到有语音播报就可以继续操作了，接着按**1**，然后输入管理员密码，**8位数字**，输入后按<strong>#</strong>，这个就是确认键的功能，密码需要输入两次，随后会出现**001**的语音，这个是管理员序号，创建管理员时会依次自动从001到009编号。
 
 完成密码设置后，按<strong>\*</strong>键返回上一层，是的，<strong>\*</strong>是返回，<strong>#</strong>是确认。
 
-#### 1.3 创建用户密码、指纹
+#### 创建用户密码、指纹
 
 在完成创建管理员后，按照上文的操作，此时你已来到主菜单，按**2**即可进入用户菜单，出现语音，继续操作，按**1**创建用户，此时，密码和指纹**二选一**，创建用户密码则如同创建管理员一样，直接输入**8位密码**，按<strong>#</strong>确认，重复一次，然后会播报用户序号（010开始）按<strong>*</strong>返回，创建第二个密码，你仍旧可以再次创建密码用户，当然，如果需要创建指纹用户，则直接用对应手指按指纹感应器，**重复5次**即可完成指纹用户创建。
 
@@ -71,7 +71,7 @@ tags:
 
 ---
 
-### 2. 维权清单
+### 维权清单
 
 |序号|责任方|简介|详情|
 |---|---|---|---|
@@ -80,7 +80,7 @@ tags:
 |3|物业|顶楼门禁权限|顶楼天台无论是对于住户的溜达放松还是紧急情况下用于救灾救援都是非常重要的！强烈要求物业对住户开放天台的进入权限！在相关法律中有说明，顶楼天台是属于该建筑内所有住户的公共区域，任何人、单位均无权私占！|
 |4|城投|楼栋信箱|楼栋信箱对于用户来说也是一个非常便捷的设施，但城投并未将其钥匙交给住户，信箱可以用于快递投放重要的发票、文件等，直接投放到对应信箱，避免了重要快递丢失的风险。且平时信箱还可用于住户临时存放物品、备用钥匙等，非常方便，城投应当将信箱钥匙交给物业暂为保管，物业配合主动将信箱钥匙交给**前来领取的住户**|
 
-### 3. 小区公告栏
+### 小区公告栏
 
 >该板块用于登记小区内的各项公告
 
@@ -88,7 +88,7 @@ tags:
 |---|---|---|---|
 |2023.03.13|物业|质量问题反馈方式|![物业公告](https://cdn.jsdelivr.net/gh/1949hacker/picgo/20230314113721.png)|
 
-### 4. 交流栏
+### 交流栏
 
 >该板块用于邻居们的交流，可以登记任何合法内容，无限制
 
