--- a/source/_posts/成都城投凤起兰庭保租房密码锁操作教程.md
+++ b/source/_posts/成都城投凤起兰庭保租房密码锁操作教程.md
@@ -34,7 +34,7 @@ tags:
 
 将门锁的后面板向上滑开，找到恢复出厂设置的按钮，如图所示：
 
-![密码锁重置按钮](https://cdn.jsdelivr.net/gh/1949hacker/picgo/2a7bd93a17a564ef1d2598af3285741.jpg)
+![密码锁重置按钮](https://img.1949hacker.cn/2a7bd93a17a564ef1d2598af3285741.jpg)
 
 **按住**红圈中的按钮不放，门锁会连续发出响声“滴滴滴”，**响声结束后**，**等待几秒**，随后会语音提示”初始化成功“
 
@@ -86,7 +86,7 @@ tags:
 
 |日期|公告所属|标题|内容|
 |---|---|---|---|
-|2023.03.13|物业|质量问题反馈方式|![物业公告](https://cdn.jsdelivr.net/gh/1949hacker/picgo/20230314113721.png)|
+|2023.03.13|物业|质量问题反馈方式|![物业公告](https://img.1949hacker.cn/20230314113721.png)|
 
 ### 交流栏
 
