--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -73,7 +73,7 @@ tags:
 
 ---
 
-### 维权清单
+## 维权清单
 
 |序号|责任方|简介|详情|
 |---|---|---|---|
@@ -82,7 +82,7 @@ tags:
 |3|物业|顶楼门禁权限|顶楼天台无论是对于住户的溜达放松还是紧急情况下用于救灾救援都是非常重要的！强烈要求物业对住户开放天台的进入权限！在相关法律中有说明，顶楼天台是属于该建筑内所有住户的公共区域，任何人、单位均无权私占！|
 |4|城投|楼栋信箱|楼栋信箱对于用户来说也是一个非常便捷的设施，但城投并未将其钥匙交给住户，信箱可以用于快递投放重要的发票、文件等，直接投放到对应信箱，避免了重要快递丢失的风险。且平时信箱还可用于住户临时存放物品、备用钥匙等，非常方便，城投应当将信箱钥匙交给物业暂为保管，物业配合主动将信箱钥匙交给**前来领取的住户**|
 
-### 小区公告栏
+## 小区公告栏
 
 >该板块用于登记小区内的各项公告
 
@@ -90,7 +90,7 @@ tags:
 |---|---|---|---|
 |2023.03.13|物业|质量问题反馈方式|![物业公告](https://img.1949hacker.cn/20230314113721.png)|
 
-### 交流栏
+## 交流栏
 
 >该板块用于邻居们的交流，可以登记任何合法内容，无限制
 
