--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -40,7 +40,7 @@ tags:
 
 **按住**红圈中的按钮不放，门锁会连续发出响声“滴滴滴”，**响声结束后**，**等待几秒**，随后会语音提示”初始化成功“
 
-来到前面板，触摸**密码输入区**，激活面板，然后按住**#**，直到出现较长的提示音”滴——！“，然后会听到菜单播报，菜单功能如下：
+来到前面板，触摸**密码输入区**，激活面板，然后按住<strong>#</strong>，直到出现较长的提示音”滴——！“，然后会听到菜单播报，菜单功能如下：
 
 ##### 主菜单
 
