--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -94,6 +94,7 @@ tags:
 
 >该板块用于邻居们的交流，可以登记任何合法内容，无限制
 
-|序号|标题|内容|
-|---|---|---|
-|1|互帮互助|邻居们应当都是在各行各业身怀绝技的卧龙凤雏，俗话说远亲不如近邻，建议邻居们平时多交流，多互帮互助，秀出各自的**绝技**！美食、IT、汽车、宠物、育儿等！|
+|标题|内容|
+|---|---|
+|互帮互助|邻居们应当都是在各行各业身怀绝技的卧龙凤雏，俗话说远亲不如近邻，建议邻居们平时多交流，多互帮互助，秀出各自的**绝技**！美食、IT、汽车、宠物、育儿等！|
+|关于除甲醛，临时给个针对《未入住》的处理办法|设备：风扇，电热器，水<br>打开所有门窗柜门，并且固定，别被吹来关上了，然后在空气对流的位置，比如对向的门窗，像套一的，阳台窗户到入户门这个就是一个对流风向，在对流风向摆上风扇通风，然后电热器，就是烤火炉对温度低的地方，或者干脆最大档，对着风扇【注意不要把风扇烤坏了】<br>除甲醛在 高温高湿环境下最有效！<br>误区：普通活性炭是物理吸附，对于甲醛（CH₂O）这种气体，一般活性炭并不适用|
