--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -98,3 +98,4 @@ tags:
 |---|---|
 |互帮互助|邻居们应当都是在各行各业身怀绝技的卧龙凤雏，俗话说远亲不如近邻，建议邻居们平时多交流，多互帮互助，秀出各自的**绝技**！美食、IT、汽车、宠物、育儿等！|
 |关于除甲醛，临时给个针对《未入住》的处理办法|设备：风扇，电热器，水<br>打开所有门窗柜门，并且固定，别被吹来关上了，然后在空气对流的位置，比如对向的门窗，像套一的，阳台窗户到入户门这个就是一个对流风向，在对流风向摆上风扇通风，然后电热器，就是烤火炉对温度低的地方，或者干脆最大档，对着风扇【注意不要把风扇烤坏了】<br>除甲醛在 高温高湿环境下最有效！<br>误区：普通活性炭是物理吸附，对于甲醛（CH₂O）这种气体，一般活性炭并不适用|
+|光触媒除甲醛的简洁科普|光触媒是作为催化剂（主要成分是纳米级二氧化钛），在**紫外线**下将空气中的水或氧气催化成具有强氧化能力的活性基团，这些活性基团可强效分解各种具有不稳定化学键的有机化合物和部分无机物，并可破坏细菌的细胞膜和凝固病毒的蛋白质载体，包括甲醛（与甲醛反应生成水、二氧化碳和其他无害物质）<br>光触媒属于前期分解后期封闭为主，这种方法在工业场景使用效果好，但是家庭效果差。因为实验表明，要达到良好去甲醛效果需要充足的紫外线强度及适合的室内化学污染物浓度（在安全标准浓度以上则效果不佳），实际家里的光线紫外线强度低，再假如室内污染浓度较低，效果可想而知！<br>而那些宣称可以用可见光除甲醛的光触媒，是在二氧化钛中加入了银、铜或铁等元素，能利用蓝光、甚至部分绿光来分解甲醛。但是，这种光触媒一般对蓝光的吸收率不到5%<br>在家庭实际效果中，它最初会部分分解已从板材等释放出的甲醛（前面提到这些甲醛通风很快散发），接着更多是成为一种保护膜，封住甲醛（作为催化剂它本身不反应，因此自身不会消耗），就跟家具制造过程的封边工艺作用差不多，然后随着材料老化脱落，甲醛继续它的3-15年缓慢释放，光触媒继续微弱地分解释放甲醛。<br>如果你确定要使用光触媒除甲醛，那么最关键的一点需要注意！如果你使用紫外线灯辅助催化，一定要注意！**长期暴露在强紫外线下，会损失皮肤和视力！**|
