--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -6,6 +6,8 @@ tags:
     - 智能门锁
 ---
 
+>2023
+
 # 本文章用作凤起兰庭居民交流平台，可以使用上方搜索按钮搜索你想了解的内容！
 
 ## 成都城投凤起兰庭保租房二期项目密码锁为《和乐门业》的，可以参照本教程尝试自行设置智能门锁
@@ -89,6 +91,7 @@ tags:
 |日期|公告所属|标题|内容|
 |---|---|---|---|
 |2023.03.13|物业|质量问题反馈方式|![物业公告](https://img.1949hacker.cn/20230314113721.png)|
+|2023.03.15|平台|功能新增|平台新增导航栏，点击页面左下角即可展开文章目录<br>![菜单按钮](https://img.1949hacker.cn//20230315170352.png)<br>![文章目录](https://img.1949hacker.cn//20230315170326.png)|
 
 ## 交流栏
 
