--- a/source/_posts/凤起兰庭美食广场.md
+++ b/source/_posts/凤起兰庭美食广场.md
@@ -23,8 +23,8 @@ tags:
 菜单：
 - 6元：凉面、凉皮
 店铺图片：
-![59d4db41101b4cbde865bce2603a87d](https://img.1949hacker.cn//59d4db41101b4cbde865bce2603a87d.jpg)
-![a0120f00e258d638e230cfefa201a2e](https://img.1949hacker.cn//a0120f00e258d638e230cfefa201a2e.jpg)|
+![店铺招牌](https://img.1949hacker.cn//59d4db41101b4cbde865bce2603a87d.jpg)
+![美食照片-01](https://img.1949hacker.cn//a0120f00e258d638e230cfefa201a2e.jpg)|
 
 ## 小吃
 
