--- a/source/_posts/凤起兰庭美食广场.md
+++ b/source/_posts/凤起兰庭美食广场.md
@@ -8,7 +8,7 @@ tags:
 
 # 凤起兰庭小区美食广场
 
-**位于凤起兰庭小区内的美食小吃摊将展示在此，如你也想在此展示你的店铺，可以联系我或在下方评论区留言！**
+**位于凤起兰庭小区内的美食小吃摊将展示在此，如你也想在此展示你的店铺，可以联系我或在下方评论区留言！<br>只登记小区内和门口的哦，远了的不登记。**
 
 >需要登记：店铺名、地点、联系方式、营业时间、菜单、店铺图片
 
