--- a/source/_posts/凤起兰庭美食广场.md
+++ b/source/_posts/凤起兰庭美食广场.md
@@ -18,13 +18,21 @@ tags:
 
 ### 汤包与粥
 地点：凤起兰庭北门
-联系方式：暂无
+联系方式：13008376735
 营业时间：07:00-20:00
 菜单：
-- 6元：凉面、凉皮
+- 包子：酱肉、鲜肉、什锦蔬菜、红豆沙、韭菜蒸饺  - 8元1笼，1元1个
+- 馒头：白糖、红糖、南瓜、火龙果 - 1元1个
+- 特色凉面、陕西凉皮 - 6元
+- 咸鸭蛋 - 3元1个
+- 卤鸡蛋 - 2元1个
+- 粥：皮蛋瘦肉，南瓜绿豆，苹果小米，红糖阴米，五谷八宝，冰糖银耳，青菜粥 - 3元1杯
+- 核桃花生豆浆 - 2元1杯
 店铺图片：
 ![店铺招牌](https://img.1949hacker.cn//59d4db41101b4cbde865bce2603a87d.jpg)
-![美食照片-01](https://img.1949hacker.cn//a0120f00e258d638e230cfefa201a2e.jpg)
+![美食图片](https://img.1949hacker.cn//3f5ceec48d8df3ad79c928c7242d08f.jpg)
+![美食照片](https://img.1949hacker.cn//19535dc047e9b53628cc2cbd45cfaa9.jpg)
+![美食照片](https://img.1949hacker.cn//a0120f00e258d638e230cfefa201a2e.jpg)
 
 ## 小吃
 
