--- a/source/_posts/凤起兰庭美食广场.md
+++ b/source/_posts/凤起兰庭美食广场.md
@@ -30,7 +30,7 @@ tags:
 - 核桃花生豆浆 - 2元1杯
 店铺图片：
 ![店铺招牌](https://img.1949hacker.cn//59d4db41101b4cbde865bce2603a87d.jpg)
-![美食图片](https://img.1949hacker.cn//3f5ceec48d8df3ad79c928c7242d08f.jpg)
+![图片菜单](https://img.1949hacker.cn//3f5ceec48d8df3ad79c928c7242d08f.jpg)
 ![美食照片](https://img.1949hacker.cn//19535dc047e9b53628cc2cbd45cfaa9.jpg)
 ![美食照片](https://img.1949hacker.cn//a0120f00e258d638e230cfefa201a2e.jpg)
 
