--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -90,6 +90,7 @@ tags:
 |---|---|---|---|
 |2023.03.13|物业|质量问题反馈方式|![物业公告](https://img.1949hacker.cn/20230314113721.png)|
 |2023.03.15|平台|功能新增|平台新增导航栏，点击页面左下角即可展开文章目录<br>![菜单按钮](https://img.1949hacker.cn//20230315170352.png)<br>![文章目录](https://img.1949hacker.cn//20230315170326.png)|
+|2023.03.16|物业|门禁、天台问题|已致电物业028-81206699，等待回复中...<br>1、楼顶天台属于逃生通道、公告区域【是否属于消防通道尚未查到，无明确法律规定我不妄下结论】，要求物业开放天台，但是，如果我没记错的话，根据城市管理规定，楼顶不得违建，且晾衣服种菜那些是不会有法律保护的，好像物业是有权清退楼顶除建筑外的其他杂物的。<br>2、门禁IC卡、NFC写卡、人脸：反馈了老年人操作手机不便，要求启用人脸识别，IC卡NFC卡理由同上，额外说明了，外出健身跑步，是不会携带随身物品的，只会是带个运动手表，所以手机手表手环的NFC写卡也要启用。|
 
 ## 交流栏
 
