--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -71,6 +71,13 @@ tags:
 
 **至此，智能门锁操作教程结束！**
 
+### 门锁功能介绍
+
+![ON/OFF开关作用](https://img.1949hacker.cn//4f06eca22753f859ab07b11e131b155.png)
+
+![猫眼开锁](https://img.1949hacker.cn//20230317141458.png)
+
+**将开关拨到OFF，按压把手也无法开锁，所以可以防止通过猫眼开锁入室盗窃。**
 ---
 
 ## 维权清单
