--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -77,7 +77,7 @@ tags:
 
 ![猫眼开锁](https://img.1949hacker.cn//20230317141458.png)
 
-**将开关拨到OFF，按压把手也无法开锁，所以可以防止通过猫眼开锁入室盗窃。**
+**将开关拨到OFF，按压把手也无法开锁，所以可以防止通过猫眼开锁入室盗窃。<br>我们没猫眼，没球鸡儿用，不管它，保持ON即可。**
 ---
 
 ## 维权清单
