--- a/source/_posts/51单片机的学习笔记.md
+++ b/source/_posts/51单片机的学习笔记.md
@@ -4,6 +4,8 @@ categories: [知识库]
 tags:
   - 嵌入式开发
 date: 2022-11-21 02:39:29
+keywords: 51单片机
+description: 51单片机的学习及其关联知识
 ---
 
 ## 51单片机的学习及其关联知识
