--- a/source/_posts/成都凤起兰庭居民交流平台.md
+++ b/source/_posts/成都凤起兰庭居民交流平台.md
@@ -100,6 +100,8 @@ keywords: 凤起兰庭
 |2023.03.13|物业|质量问题反馈方式|![物业公告](https://img.1949hacker.cn/20230314113721.png)|
 |2023.03.15|平台|功能新增|平台新增导航栏，点击页面左下角即可展开文章目录<br>![菜单按钮](https://img.1949hacker.cn//20230315170352.png)<br>![文章目录](https://img.1949hacker.cn//20230315170326.png)|
 |2023.03.16|物业|门禁、天台问题|已致电物业028-81206699，等待回复中...<br>1、楼顶天台属于逃生通道、公告区域【是否属于消防通道尚未查到，无明确法律规定我不妄下结论】，要求物业开放天台，但是，如果我没记错的话，根据城市管理规定，楼顶不得违建，且晾衣服种菜那些是不会有法律保护的，好像物业是有权清退楼顶除建筑外的其他杂物的。<br>2、门禁IC卡、NFC写卡、人脸：反馈了老年人操作手机不便，要求启用人脸识别，IC卡NFC卡理由同上，额外说明了，外出健身跑步，是不会携带随身物品的，只会是带个运动手表，所以手机手表手环的NFC写卡也要启用。|
+|2023.03.21|平台|2栋楼顶天台问题|已于3.19联系物业上天台，经实地考察，楼顶天台无女儿墙，远离边缘的中心区域用铁栏杆做了围挡，楼顶建筑设计确实符合不上人屋面规定，因此，建议各位邻居遵守此规定，避免发生意外坠楼！|
+|2023.03.21|平台|小区门禁IC、NFC、人脸识别问题|物业回复不提供IC、NFC开门方式，人脸识别正在接入公安视频网，但我对此持怀疑态度，人脸识别只需要有比对图片和算法即可，所以人脸识别开门并没有需要接入公安视频网的需要|
 
 ## 交流栏
 
@@ -109,6 +111,7 @@ keywords: 凤起兰庭
 |---|---|
 |互帮互助|邻居们应当都是在各行各业身怀绝技的卧龙凤雏，俗话说远亲不如近邻，建议邻居们平时多交流，多互帮互助，秀出各自的**绝技**！美食、IT、汽车、宠物、育儿等！|
 |光触媒除甲醛的简洁科普|光触媒是作为催化剂（主要成分是纳米级二氧化钛），在**紫外线**下将空气中的水或氧气催化成具有强氧化能力的活性基团，这些活性基团可强效分解各种具有不稳定化学键的有机化合物和部分无机物，并可破坏细菌的细胞膜和凝固病毒的蛋白质载体，包括甲醛（与甲醛反应生成水、二氧化碳和其他无害物质）<br>光触媒属于前期分解后期封闭为主，这种方法在工业场景使用效果好，但是家庭效果差。因为实验表明，要达到良好去甲醛效果需要充足的紫外线强度及适合的室内化学污染物浓度（在安全标准浓度以上则效果不佳），实际家里的光线紫外线强度低，再假如室内污染浓度较低，效果可想而知！<br>而那些宣称可以用可见光除甲醛的光触媒，是在二氧化钛中加入了银、铜或铁等元素，能利用蓝光、甚至部分绿光来分解甲醛。但是，这种光触媒一般对蓝光的吸收率不到5%<br>在家庭实际效果中，它最初会部分分解已从板材等释放出的甲醛（前面提到这些甲醛通风很快散发），接着更多是成为一种保护膜，封住甲醛（作为催化剂它本身不反应，因此自身不会消耗），就跟家具制造过程的封边工艺作用差不多，然后随着材料老化脱落，甲醛继续它的3-15年缓慢释放，光触媒继续微弱地分解释放甲醛。<br>如果你确定要使用光触媒除甲醛，那么最关键的一点需要注意！如果你使用紫外线灯辅助催化，一定要注意！**长期暴露在强紫外线下，会损失皮肤和视力！**|
+|集体维权建议|首先，**我们是物业的甲方**，我们是物业服务的购买者，我们理应维护我们的正当权益！以及对于城投的问题，我们应当联合起来，**整理维权清单**，然后约定一个各位承租人方便的时间，一起找城投和物业共同协商。协商前上报社区，最好社区安排工作人员在场监督，以便调解，同时，现场人数会较多，为避免被别有用心的人利用，引起混乱、冲突，是很有必要让社区工作人员在场监督并由承租人代表现场声明文明协商后，再开始协商维权内容。至于为何是让社区到场而不是公安，我仅代表个人提出一个假设：“被公安要求解散”......|
 
 ## 居家知识导航
 
