--- a/source/_posts/硬盘容量为何达不到厂家标称的容量？硬盘容量造假缩水？.md
+++ b/source/_posts/硬盘容量为何达不到厂家标称的容量？硬盘容量造假缩水？.md
@@ -43,10 +43,28 @@ tags:
 |RAIDZ2|RAID6|
 |RAIDZ3|无|
 
+**2024年1月13日补充：考虑到zfs文件系统的特性，减少文件系统日志等占用容量0.5%，减少余量空间分配占用容量2.93%**
+
 若您使用的是昱格NAS，在创建存储池时我们会默认为您做容量限制，以防存储池容量被撑爆卡死系统，会将可用容量限制为实际容量的95%
 
 若您采购了昱格的YGENAS-VH5（桌面式5盘位NAS）且配备了5块16TB硬盘，做RAIDZ1阵列并开启默认限额，那您的实际可用容量计算公式如下：
 
 ```shell
-16*1000^4/1024^4*(5-1)*0.95=55.2972 TB
+16*1000^4/1024^4*(5-1)*(1-0.05)=55.2972 TiB
+
+# 2024年1月13日更新后计算公式为
+16*1000^4/1024^4*(5-1)*(1-0.05-0.005-0.0293)=53.3 TiB
+
+# 计算解析
+16 TB转换为TiB：*1000^4/1024^4
+计算RAIDZ1 N-1容量：*(5-1)
+计算zfs存储池占用容量：*(1-0.05-0.005-0.0293)
 ```
+
+2024.1.13 昱格YGENAS-RH16s高性能全闪NAS配合希捷5U84磁盘扩展柜，建设了百T级U.2高性能SSD+PB级大容量HDD存储池，采用100G光纤链路发布共享，项目金额二百多万
+
+昱格——科技智能服务商
+
+为您提供专业虚拟化、云桌面、NAS存储等建设方案，从服务器、存储到网络全方位覆盖，一站式解决方案提供。
+
+欢迎致电400-028-0061（亦可通过文末WeChat扫描二维码添加微信联系我，请注明来自1949hacker）
