--- a/source/_posts/未整理的随手技术笔记（实时更新，各种乱七八糟的技术都会记录在这儿）.md
+++ b/source/_posts/未整理的随手技术笔记（实时更新，各种乱七八糟的技术都会记录在这儿）.md
@@ -24,6 +24,6 @@ tags:
 ### CentOS 7批量给eth0网卡添加IP
 
 ```shell
-# 通过变量d实现改一个192使所有D段地址同步修改
-d=192 && ip addr add 43.225.58.$d/27 dev eth0 && ip addr add 69.165.77.$d/27 dev eth0 && ip addr add 103.42.29.$d/27 dev eth0 && ip addr add 220.158.194.$d/27 dev eth0 && ip addr add 220.158.195.$d/27 dev eth0 && ip addr add 107.151.236.$d/27 dev eth0 && ip addr add 107.151.237.$d/27 dev eth0 && ip addr add 198.44.163.$d/27 dev eth0
+# 通过变量d实现改一个128使所有D段地址同步修改
+d=128 && echo -e "IPADDR2=43.225.58.$d\nPREFIX2=27\nIPADDR3=69.165.77.$d\nPREFIX3=27\nIPADDR4=103.42.29.$d \nPREFIX4=27\nIPADDR5=220.158.194.$d \nPREFIX5=27\nIPADDR6=220.158.195.$d \nPREFIX6=27\nIPADDR7=107.151.236.$d \nPREFIX7=27\nIPADDR8=107.151.237.$d \nPREFIX8=27\nIPADDR9=198.44.163.$d \nPREFIX9=27\n" >> /etc/sysconfig/network-scripts/ifcfg-eth0 && systemctl restart network
 ```
