change domain and email

--- a/source/_posts/成都凤起兰庭保租房密码锁设置教程.md
+++ b/source/_posts/成都凤起兰庭保租房密码锁设置教程.md
@@ -17,7 +17,7 @@ tags:
 
 将门锁的后面板向上滑开，找到恢复出厂设置的按钮，如图所示：
 
-![密码锁重置按钮](https://img.1949hacker.cn/2a7bd93a17a564ef1d2598af3285741.jpg)
+![密码锁重置按钮](https://img.hackerbs.com/2a7bd93a17a564ef1d2598af3285741.jpg)
 
 **按住**红圈中的按钮不放，门锁会连续发出响声“滴滴滴”，**响声结束后**，**等待几秒**，随后会语音提示”初始化成功“
 
