--- a/source/_posts/本站上线周报生成器.md
+++ b/source/_posts/本站上线周报生成器.md
@@ -8,6 +8,6 @@ tags:
     - OpenAI
 ---
 
-[周报生成器地址：https://ai.1949hacker.cn/zh](https://ai.1949hacker.cn/zh)
+[周报生成器地址：https://ai.hackerbs.com/zh](https://ai.hackerbs.com/zh)
 
 该工具调用的是OpenAI GPT-3.5 API，速度慢是正常的，等等就好，点击生成后下滑页面就能看到内容了。
