--- a/source/_posts/未整理的随手技术笔记（实时更新，各种乱七八糟的技术都会记录在这儿）.md
+++ b/source/_posts/未整理的随手技术笔记（实时更新，各种乱七八糟的技术都会记录在这儿）.md
@@ -2,6 +2,7 @@
 title: 未整理的随手技术笔记（实时更新，各种乱七八糟的技术都会记录在这儿）
 sticky: 99
 categories: [知识库]
+comments: true
 date: 2024-04-02 16:34:01
 keywords: 知识库
 tags:
