--- a/source/_posts/作为服务器装机技术人员应掌握的技术能力.md
+++ b/source/_posts/作为服务器装机技术人员应掌握的技术能力.md
@@ -17,15 +17,20 @@ tags:
 
 本文用于技术培训和让服务器装机人员了解应具备的专业知识、能力
 
-内容大纲如下
-
-[TOC]
+内容大纲见左侧目录
 
 <!-- more -->
 
 ## 服务器硬件基础知识
 
 ### 三大件：主板、CPU、内存
+
+#### CPU基础知识
+
+|品牌|系列|特性|
+|---|---|---|
+|Intel|Core|消费级家用CPU,不支持ECC服务器内存,PCIe通道数少，主频高核数少|
+|Intel|Xeon|企业级服务器CPU,支持ECC服务器内存，PCIe通道数多，主频相对家用级低一些，主要是多核，稳定，处理大量运算|
 
 ### 其他配件：硬盘，PCIe，电源
 
