--- a/source/_posts/作为服务器装机技术人员应掌握的技术能力.md
+++ b/source/_posts/作为服务器装机技术人员应掌握的技术能力.md
@@ -29,12 +29,20 @@ tags:
 
 |品牌|系列|特性|
 |---|---|---|
-|Intel|Core|消费级家用CPU,不支持ECC服务器内存,PCIe通道数少，主频高核数少|
+|Intel|Core|酷睿，消费级家用CPU,不支持ECC服务器内存,PCIe通道数少，主频高核数少|
 |Intel|Xeon|企业级服务器CPU,支持ECC服务器内存，PCIe通道数多，主频相对家用级低一些，主要是多核，稳定，处理大量运算|
+|AMD|Ryzen|锐龙，消费级家用CPU，同Intel消费级CPU一样|
+|AMD|EPYC|宵龙，企业级服务器CPU，多核吊打Intel的存在，离谱的超多核CPU|
 
 #### 内存基础知识
 
 ##### non-ECC ECC REG ECC内存
+
+|类型|特点|应用场景|
+|---|---|---|
+|non-ECC|没有ECC纠错|家用级内存，因为家用级CPU无法支持ECC内存，且non-ECC内存性价比高，频率高，所以常用于不需要长时间运行的家用场景|
+|ECC|纯ECC内存|企业级服务器内存，带ECC纠错，但没有驱动芯片，最高容量便是32G，适用于需要长时间稳定运行点服务器|
+|REG ECC|大容量ECC内存|企业级服务器内存，也是最常见的服务器内存，容量可以超过32G，有一颗不同于内存颗粒的驱动芯片，用于支持超过32G容量的内存颗粒，适用于大内存服务器，高密度运算服务器等|
 
 ##### DDR4、DDR5内存
 
