--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -401,6 +401,16 @@ HPL.out      output file name (if any)
 40 9 8 13 13 20 16 32 64        values of NB
 ```
 
+根据这份文件，运行命令如下：
+
+```shell
+mpirun --allow-run-as-root -np 96 --map-by core --bind-to core ./xhpl
+# --allow-run-as-root 允许root用户运行
+# -np 96 启动96个MPI进程
+# --map-by core MPI进程核CPU逻辑核心进行绑定
+# --bind-to core 将每个进程锁定到core上运行，避免cache miss
+```
+
 |行号|参数内容 |说明|
 |---|---|---|
 |1|
