--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -39,8 +39,7 @@ tags:
 |测试项|测试工具|选择理由|测试方式|
 |---|---|---|---|
 |内存带宽|STREAM Benchmark|HPC内存带宽的行业标准测试|测试3次取均值|
-|压力测试|sysbench memory|压力测试，随机、顺序访问测试|正常压测|
-|稳定性测试|memtester|持续运行数小时,测试稳定性|正常压测|
+|稳定性测试|Memtest86+|持续运行数小时,测试稳定性|正常压测|
 
 ### 网络基准测试
 
