--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -80,6 +80,10 @@ tags:
 
 替换源为清华大学CentOS-Vault源
 
+在[清华CentOS-Vault仓库](https://mirrors.tuna.tsinghua.edu.cn/help/centos-vault/)输入小版本，获取命令
+
+例如CentOS 7.9.2009如下
+
 ```shell
 sed -e "s|^mirrorlist=|#mirrorlist=|g" \
     -e "s|^#baseurl=http://mirror.centos.org/centos/\$releasever|baseurl=https://mirrors.tuna.tsinghua.edu.cn/centos-vault/7.9.2009|g" \
