--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -508,6 +508,46 @@ gcc -O3 -fopenmp -DSTREAM_ARRAY_SIZE=100000000 stream.c -o stream
 ./stream >> mem_test_0.log
 ```
 
+输出结果如下
+
+```shell
+-------------------------------------------------------------
+STREAM version $Revision: 5.10 $
+-------------------------------------------------------------
+This system uses 8 bytes per array element.
+-------------------------------------------------------------
+Array size = 100000000 (elements), Offset = 0 (elements)
+Memory per array = 762.9 MiB (= 0.7 GiB).
+Total memory required = 2288.8 MiB (= 2.2 GiB).
+Each kernel will be executed 10 times.
+ The *best* time for each kernel (excluding the first iteration)
+ will be used to compute the reported bandwidth.
+-------------------------------------------------------------
+Number of Threads requested = 192
+Number of Threads counted = 192
+-------------------------------------------------------------
+Your clock granularity/precision appears to be 1 microseconds.
+Each test below will take on the order of 16443 microseconds.
+   (= 16443 clock ticks)
+Increase the size of the arrays if this shows that
+you are not getting at least 20 clock ticks per test.
+-------------------------------------------------------------
+WARNING -- The above is only a rough guideline.
+For best results, please be sure you know the
+precision of your system timer.
+-------------------------------------------------------------
+Function    Best Rate MB/s  Avg time     Min time     Max time
+Copy:          254046.3     0.006921     0.006298     0.011713
+Scale:         189664.1     0.008491     0.008436     0.008531
+Add:           204691.7     0.011839     0.011725     0.011884
+Triad:         212674.9     0.011320     0.011285     0.011350
+-------------------------------------------------------------
+Solution Validates: avg error less than 1.000000e-13 on all three arrays
+-------------------------------------------------------------
+```
+
+只取其中的典型值Triad即可，代表典型科学计算/数值模拟中的内存访问性能
+
 #### 进行内存的稳定性测试
 
 根据步骤中提供的下载链接，下载后的文件`mt86plus_7.20_64.grub.iso.zip`，版本以你最新的为准，上方表格中的链接如果旧了就在这里打开下载
