--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -186,7 +186,7 @@ LAdir        = $(HOME)/netlib/ARCHIVES/Linux_ATHLON
 LAinc        =
 LAlib        = $(LAdir)/libf77blas.a $(LAdir)/libatlas.a
 # 修改为
-LAdir   = /usr/lib64/openblas  # 或者你的 OpenBLAS 安装路径
+LAdir   = /usr/lib64/openblas  # 你的 OpenBLAS 安装路径，find / -name openblas
 LAinc   =
 LAlib   = -lopenblas
 
