--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -187,10 +187,10 @@ ARCH = AMD_OpenBLAS
 # 修改配置使HPL走CBLAS接口，而不是老的Fortran BLAS
 # 在配置文件中找到
 HPL_DEFS     = $(F2CDEFS) $(HPL_OPTS) $(HPL_INCLUDES)
-# 在这一行的上方加入以下内容
-BLASLIB = -lopenblas
+
 # 在末尾加上 -DHPL_CALL_CBLAS
 HPL_DEFS     = $(F2CDEFS) $(HPL_OPTS) $(HPL_INCLUDES) -DHPL_CALL_CBLAS
+
 # 找到CCFLAGS，添加-march=native
 CCFLAGS      = $(HPL_DEFS) -fomit-frame-pointer -O3 -funroll-loops -W -Wall -march=native
 
@@ -203,21 +203,12 @@ LAdir   = /usr/lib64/openblas  # 你的 OpenBLAS库路径，find / -name libopen
 LAinc   =
 LAlib   = -lopenblas
 
-# # 指定OpenMPI
-# MPdir   = /usr
-# MPinc   = -I/usr/include/openmpi-x86_64
-# MPlib   = -L/usr/lib64 -lmpi
-
 # 改为直接使用mpicc编译
 # 修改CC
 CC      = mpicc
-# 在HPL_LIBS = $(HPLlib) $(LAlib) $(MPlib)的上方加入
-MPlib = -lmpi
-MPIinc = -I/usr/lib64/openmpi/include
-MPilib = -L/usr/lib64/openmpi/lib -lmpi
+# 修改LINKER
+LINKER = mpicc
 
-# 将g77指向gfortran
-ln -s /usr/bin/gfortran /usr/bin/g77
 # 编译HPL
 make -f Make.top build_src arch=AMD_OpenBLAS
 make -f Make.top build_tst arch=AMD_OpenBLAS
