--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -328,7 +328,7 @@ End of Tests.
 
 ##### HPL.dat的参数及其说明
 
-在线生成HPL.dat文件的网站[HPL.dat](https://www.advancedclustering.com/act_kb/tune-hpl-dat-file/)
+在线生成HPL.dat文件的网站 [HPL.dat](https://www.advancedclustering.com/act_kb/tune-hpl-dat-file/)
 
 |参数|说明|
 |---|---|
@@ -449,7 +449,8 @@ HPL.out      output file name (if any)
 ```shell
 mpirun --allow-run-as-root -np 96 --map-by core --bind-to core ./xhpl
 # --allow-run-as-root 允许root用户运行
-# -np 96 启动96个MPI进程，与物理内核数相同，不是线程数
+# -np 96 启动96个MPI进程，与物理内核总数相同，不是线程数
+# 如果你是4路每路20核那你就要填80，是所有CPU物理内核总数
 # --map-by core MPI进程核CPU逻辑核心进行绑定
 # --bind-to core 将每个进程锁定到core上运行，避免cache miss
 ```
