--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -25,21 +25,19 @@ tags:
 
 ## 测试项
 
-### CPU基准和稳定性测试
+### CPU基准测试
 
 |测试项|测试工具|参考业务场景|测试方式|
 |---|---|---|---|
 |双精度浮点运算 float64|HPL|该项测试为HPC行业标准，TOP500超级计算机排行榜均采用该方式评估|测试3次取均值|
-|稳定性|Stress-NG|CPU、内存、IO全面压力测试|正常压测|
 
-### 内存基准和稳定性测试
+### 内存基准测试
 
 <!-- more -->
 
 |测试项|测试工具|选择理由|测试方式|
 |---|---|---|---|
 |内存带宽|STREAM Benchmark|HPC内存带宽的行业标准测试，TOP500超级计算机排行榜均采用该方式评估|Copy/Scale/Add/Triad测试3次取均值|
-|稳定性测试|[Memtest86+](https://www.memtest.org/download/v7.20/mt86plus_7.20_64.grub.iso.zip)|持续运行数小时,测试稳定性|正常压测|
 
 ### 硬盘测试
 
@@ -51,6 +49,12 @@ tags:
 |1m 单队列|fio bs=1m iodepth=1|顺序读写，备份、视频流、镜像分发|测试3次取均值|
 |1m 32队列|fio bs=1m iodepth=32|并发大文件读写，大规模备份，分布式存储，对象存储|测试3次取均值|
 |硬盘压测|fio -numjobs=32 -bs=4k -iodepth=64 -directory|具体代码见下方及下文中有关于fio参数的解释|
+
+---
+
+> 补充说明：除系统盘不能直接测试裸盘外，其他盘均应使用裸盘测试，如`fio -filename=/dev/sdb`和`fio -filename=/dev/nvme0n1`，直接指向硬盘块设备，而不是分区或路径
+
+---
 
 ```shell
 fio -name=disk_benchmark -size=5G -runtime=5d -time_base -direct=1 -ioengine=libaio -randrepeat=0 -numjobs=32 -group_reporting -bs=4k -rw=randrw -rwmixwrite=30 -directory=/home/test/ -iodepth=64
@@ -544,18 +548,6 @@ Solution Validates: avg error less than 1.000000e-13 on all three arrays
 
 只取其中的典型值Triad即可，代表典型科学计算/数值模拟中的内存访问性能
 
-#### 进行内存的稳定性测试
-
-根据步骤中提供的下载链接，下载后的文件`mt86plus_7.20_64.grub.iso.zip`，版本以你最新的为准，上方表格中的链接如果旧了就在这里打开下载
-
-[Memtest86+](https://www.memtest.org/)
-
-![20250915173052](https://img.hackerbs.com//20250915173052.png)
-
-建议使用这个版本，用有ventoy的盘直接引导就能用了，很方便，在带外iKVM直接挂载引导也行
-
-启动界面
-
 #### 硬盘性能fio测试
 
 使用fio进行硬盘的性能测试，测试结果包含IOPS、带宽、延迟
@@ -670,4 +662,15 @@ tar -zxvf Geekbench-6.5.0-Linux.tar.gz
 
 # 系统glibc版本过低，使用旧版本GeekBench
 https://cdn.geekbench.com/Geekbench-5.5.1-Linux.tar.gz
+```
+
+### 稳定性测试
+
+鉴于HPL测试本身就会使服务器CPU内存满载，所以直接在上文CPU测试的基础上直接变成重复执行即可做到稳定性测试，配合带外观察CPU温度内存等是否故障即可
+
+```shell
+# 循环运行100次
+for i in {1..100};do "hpl代码";done
+# 以我的AMD 9A14为例
+for i in {1..100};do mpirun --allow-run-as-root -np 96 --map-by core --bind-to core ./xhpl;done
 ```
