--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -680,25 +680,26 @@ for i in {1..100};do mpirun --allow-run-as-root -np 96 --map-by core --bind-to c
 ```shell
 for i in {1..1000}; do
     echo -e "\033[34;1m=== 第 $i 次运行开始 ===\033[0m"
-    
+
     # 运行测试并保存输出到临时文件
+    # 记得将其替换为你自己的对应命令
     mpirun --allow-run-as-root -np 96 --map-by core --bind-to core ./xhpl > hpl_run_$i.log 2>&1
-    
+
     # 提取关键指标
     gflops=$(grep -A1 "T/V.*N.*NB.*P.*Q" hpl_run_$i.log | grep -v "T/V\|--" | awk '{print $NF}')
     error=$(grep "||Ax-b||_oo" hpl_run_$i.log | awk -F'= ' '{print $2}' | awk '{print $1}')
     status=$(grep "PASSED\|FAILED" hpl_run_$i.log | awk '{print $NF}')
-    
+
     # 输出结果
     echo -e "Gflops: \033[32;1m$gflops\033[0m"
     echo -e "Error:  \033[33;1m$error\033[0m"
     echo -e "Status: \033[36;1m$status\033[0m"
     echo -e "\033[36;1m第 $i 次运行完成！\033[0m"
     echo ""
-    
+
     # 可选：保存汇总结果到文件
     echo "运行$i, $gflops, $error, $status" >> hpl_summary.csv
-    
+
     # 可选：删除临时日志文件以节省空间
     # rm hpl_run_$i.log
 done
