--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -74,6 +74,10 @@ fio -name=disk_benchmark -size=5G -runtime=5d -time_base -direct=1 -ioengine=lib
 |---|---|---|---|
 |综合性能指数|GeekBench|横向比较整机性能，仅供参考|普通测试|
 
+> CentOS 7.9.2009跑不了GeekBench 6
+
+[GeekBench历史版本](https://www.geekbench.com/legacy/)
+
 ## 测试过程
 
 ### AMD 9F14平台测试
