--- a/themes/next/languages/zh-CN.yml
+++ b/themes/next/languages/zh-CN.yml
@@ -80,7 +80,7 @@ symbol:
   period: "。"
   colon: "："
 reward:
-  donate: 捐助
+  donate: 看这里->土豪有钱的话打赏一下咯 | 给我介绍份高薪工作也行
   wechatpay: 微信
   alipay: 支付宝
   paypal: PayPal
