--- a/source/_posts/随笔-《存在的痕迹：不在于石碑，而于涟漪》.md
+++ b/source/_posts/随笔-《存在的痕迹：不在于石碑，而于涟漪》.md
@@ -19,6 +19,10 @@ tags:
   - 人生价值
 ---
 
+观此视频有感
+
+[人为什么有虚岁 因为妈妈比其他人 单独的拥有了你一年](https://www.douyin.com/video/7560968339707759924)
+
 《存在的痕迹：不在于石碑，而于涟漪》
 
 小时候我就在想——
@@ -85,6 +89,8 @@ tags:
 比苦难甜，就行了。
 
 勿要，力不能挽流年，唯有目送山河倾——追悔莫及
+
+<!-- more -->
 
 **The Traces of Existence: Not in Stone Monuments, But in Ripples**
 
