--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -45,7 +45,8 @@ tags:
 
 > *重要更新: 2025-11-4 发布了fio硬盘测试的全自动工具*
 > 工具涵盖了自动运行fio，通过预置的benchmark.fio文件自动运行60项基础测试
-> 运行前检查其中的`directory=/mnt/test  ; 测试目录路径，请根据实际情况修改`
+> 运行前检查其中的`directory=/mnt/test/  ; 测试目录路径，请根据实际情况修改`
+> 补充：注意`directory=`后面一定是带`/`的，因为是目录
 > 可以选择将需要测试的硬盘挂载到这个目录，或者修改为你想要的目录
 > `runtime=30s          ; 每个测试运行 30 秒`，则是每项测试运行多久
 > `ramp_time=5s         ; 5秒预热，使设备进入稳定状态`，这一条无需修改，作用是按照所设定的参数运行5秒确保硬盘跑起来，避免冷启动的性能过低或者波动
@@ -56,6 +57,8 @@ tags:
 [仓库地址:https://github.com/1949hacker/fio_benchmark](https://github.com/1949hacker/fio_benchmark)
 
 [可执行程序下载](https://github.com/1949hacker/fio_benchmark/releases/tag/v1.0)
+
+![运行效果图](https://img.hackerbs.com//20251104164309.png)
 
 ---
 
