--- a/source/_posts/服务器稳定性及基准测试方法.md
+++ b/source/_posts/服务器稳定性及基准测试方法.md
@@ -525,6 +525,9 @@ mpirun --allow-run-as-root -np 96 --map-by core --bind-to core ./xhpl
 # 如果你是4路每路20核那你就要填80，是所有CPU物理内核总数
 # --map-by core MPI进程核CPU逻辑核心进行绑定
 # --bind-to core 将每个进程锁定到core上运行，避免cache miss
+
+# 显示的同时输出到文件，方便做为测试记录
+mpirun --allow-run-as-root -np 96 --map-by core --bind-to core ./xhpl 2>&1 | tee -a HPL_0.out
 ```
 
 关于参数的解释在官网有详细说明[HPL Tuning](https://www.netlib.org/benchmark/hpl/tuning.html)
